  concrete org.gjt.sp.jedit.options.GlobalOptions subclass with the
  Global Options-specific code. This allows plugins to create paned
  dialog boxes similar to Global Options.

+ Plugin Manager Changes:

- Added "Select All" button to Install and Update Plugins dialogs
- The plugin list is only downloaded once per Plugin Manager dialog box
  instance

+ Bug Fixes:

- Line numbers in the 'Markers' menu were off by one
- On some Java versions, the popup menu code would not work in frames
  and dialog boxes and print a stream of exceptions
- Fixed exception thrown on MacOS X when attempting to list "Local
  Drives" in the file system browser (Kris Kopicki)
- Fixed problems if a macro file name had a space in it
- Fixed a number of problems with mode property handling:
  - It was not possible to override a mode's property with a blank
    value; for example if you no longer wanted objective-c mode to open
    *.m files (and instead use matlab mode for those files) you had to
    enter a dummy filename glob in the objective-c settings.
  - Changing the filename or first line glob in the "Mode Specific" pane
    would not take effect until jEdit was restarted.
- Entering a relative path in the file system browser's "Path" field
  didn't work
- "Format Paragraph" command would insert extra newlines if a line ended
  with a space
- The MacOS plugin had a version check that looked for an exact MRJ
  version match, rather than an equal or newer version. This broke the
  plugin when running on MacOS X 10.2. (Kris Kopicki)

* Version 4.1pre4

Thanks to Kris Kopicki and Stefan Jozsa for contributing to this
release.

+ Syntax Highlighting Changes:

- Added AppleScript syntax highlighting (Kris Kopicki)
- Improved Informix-4GL syntax highlighting (Stefan Jozsa)

+ User Interface Changes:

- TAB key can now be used to insert completions in the 'Complete Word'
  popup.

+ Bug Fixes:

- Macro listing code was completely broken in 4.1pre3; only the first